--- a/all.properties
+++ b/all.properties
@@ -1,3 +1,3 @@
-src1=d:\\study\\ant\\src1
-src2=d:\\study\\ant\\src2
-src3=d:\\study\\ant\\src3
+proj1=Z:\\working\\antp\\proj1
+proj2=Z:\\working\\antp\\proj2
+proj3=Z:\\working\\antp\\proj3
