--- a/build.xml
+++ b/build.xml
@@ -1,27 +1,41 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<project name="HelloWorld" default="run" basedir=".">
-	<property name="src" value="src" />
-	<property name="dest" value="classes" />
-	<property name="hello_jar" value="hello1.jar" />
+<project name="main" default="build" basedir=".">
+	<property name="bin" value="${basedir}\bin" />
+	<property file="all.properties" />
 	<target name="init">
-		<mkdir dir="${dest}" />
-	</target>
-	<target name="compile" depends="init">
-		<javac srcdir="${src}" destdir="${dest}" />
-	</target>
-	<target name="build" depends="compile">
-		<jar jarfile="${hello_jar}" basedir="${dest}" />
-	</target>
-	<target name="run" depends="build">
-		<java classname="teset.ant.HelloWorld" classpath="${hello_jar}" />
+		<mkdir dir="${bin}" />
 	</target>
 	<target name="clean">
-		<delete dir="${dest}" />
-		<delete file="${hello_jar}" />
+		<ant dir="${proj1}" target="clean" />
+		<ant dir="${proj2}" target="clean" />
+		<ant dir="${proj3}" target="clean" />
 	</target>
-	<target name="rerun" depends="clean,run">
+	<target name="run">
+		<ant dir="${proj1}" target="run" />
+		<ant dir="${proj2}" target="run" />
+		<ant dir="${proj3}" target="run" />
+	</target>
+	<target name="build" depends="init,clean,run">
+		<copy todir="${bin}">
+			<fileset dir="${proj1}">
+				<include name="*.jar" />
+			</fileset>
+			<fileset dir="${proj2}">
+				<include name="*.jar" />
+			</fileset>
+			<fileset dir="${proj3}">
+				<include name="*.jar" />
+			</fileset>
+		</copy>
+	</target>
+	<target name="rebuild" depends="build,clean">
 		<ant target="clean" />
-		<ant target="run" />
+		<ant target="build" />
+	</target>
+	<target name="test">
+		<ant dir="${proj1}" target="test" />
+		<ant dir="${proj2}" target="test" />
+		<ant dir="${proj3}" target="test" />
 	</target>
 </project>
